added swagger description for handlers
