# backend/docs/swagger.yaml
@@ -1,7 +1,199 @@
 info:
   contact: {}
-  description: chi-swagger example APIs
-  title: chi-swagger example APIs
-  version: "1.0"
-paths: {}
+paths:
+  /docs:
+    post:
+      consumes:
+      - application/json
+      description: create decrypted doc with signature
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: create decrypted doc with signature
+      tags:
+      - docs
+  /docs/{doc_id}:
+    get:
+      consumes:
+      - application/json
+      description: get document by doc_id
+      parameters:
+      - description: The doc_id of a document
+        in: path
+        name: doc_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: get document by doc_id
+      tags:
+      - docs
+  /docs/available:
+    post:
+      consumes:
+      - application/json
+      description: get available docs for user
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: get available docs for user
+      tags:
+      - docs
+  /keys:
+    get:
+      consumes:
+      - application/json
+      description: get generated public and private keys for user from server
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: get generated public and private keys
+      tags:
+      - keys
+  /keys/public:
+    get:
+      consumes:
+      - application/json
+      description: get your public
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: get your public key
+      tags:
+      - keys
+    post:
+      consumes:
+      - application/json
+      description: post your public key in the system
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: post your public key in the system
+      tags:
+      - keys
+  /keys/public/{user_id}:
+    get:
+      consumes:
+      - application/json
+      description: get another user public key
+      parameters:
+      - description: The unique user_id of a User
+        in: path
+        name: user_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: get another user public key
+      tags:
+      - keys
+  /keys/public/server:
+    get:
+      consumes:
+      - application/json
+      description: get server public key
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+        "400":
+          description: Bad Request
+          schema:
+            type: string
+        "500":
+          description: Internal Server Error
+          schema:
+            type: string
+      summary: get server public key
+      tags:
+      - keys
 swagger: "2.0"
