# backend/internal/handlers/keys.go
@@ -16,6 +16,37 @@ func NewKeysHandler(service *services.KeyService) *KeysHandler {
 	}
 }
 
+// GetGeneratedKeys
+// @Summary get generated public and private keys
+// @Description  get generated public and private keys for user from server
+// @Tags         keys
+// @Accept       json
+// @Produce      json
+//
+//	@Success      200         {string}  string "OK"
+//	@Failure      400         {string}  string  "Bad Request"
+//	@Failure      500         {string}  string  "Internal Server Error"
+//
+// @Router       /keys [get]
+func (h *KeysHandler) GetGeneratedKeys(w http.ResponseWriter, r *http.Request) {
+	_, err := w.Write([]byte(fmt.Sprintf("%v", r.URL)))
+	if err != nil {
+		return
+	}
+}
+
+// Post keys
+// @Summary post your public key in the system
+// @Description  post your public key in the system
+// @Tags         keys
+// @Accept       json
+// @Produce      json
+//
+//	@Success      200         {string}  string "OK"
+//	@Failure      400         {string}  string  "Bad Request"
+//	@Failure      500         {string}  string  "Internal Server Error"
+//
+// @Router       /keys/public [post]
 func (h *KeysHandler) Post(w http.ResponseWriter, r *http.Request) {
 	_, err := w.Write([]byte(fmt.Sprintf("%v", r.URL)))
 	if err != nil {
@@ -23,6 +54,18 @@ func (h *KeysHandler) Post(w http.ResponseWriter, r *http.Request) {
 	}
 }
 
+// Get keys
+// @Summary get your public key
+// @Description  get your public
+// @Tags         keys
+// @Accept       json
+// @Produce      json
+//
+//	@Success      200         {string}  string "OK"
+//	@Failure      400         {string}  string  "Bad Request"
+//	@Failure      500         {string}  string  "Internal Server Error"
+//
+// @Router       /keys/public [get]
 func (h *KeysHandler) Get(w http.ResponseWriter, r *http.Request) {
 	_, err := w.Write([]byte(fmt.Sprintf("%v", r.URL)))
 	if err != nil {
@@ -30,6 +73,19 @@ func (h *KeysHandler) Get(w http.ResponseWriter, r *http.Request) {
 	}
 }
 
+// GetAnotherUserPublicKey
+// @Summary get another user public key
+// @Description  get another user public key
+// @Tags         keys
+// @Accept       json
+// @Produce      json
+// @Param		 user_id path string true "The unique user_id of a User"
+//
+//	@Success      200         {string}  string "OK"
+//	@Failure      400         {string}  string  "Bad Request"
+//	@Failure      500         {string}  string  "Internal Server Error"
+//
+// @Router       /keys/public/{user_id} [get]
 func (h *KeysHandler) GetAnotherUserPublicKey(w http.ResponseWriter, r *http.Request) {
 	_, err := w.Write([]byte(fmt.Sprintf("%v", r.URL)))
 	if err != nil {
@@ -37,14 +93,19 @@ func (h *KeysHandler) GetAnotherUserPublicKey(w http.ResponseWriter, r *http.Req
 	}
 }
 
+// GetServerPublicKey
+// @Summary get server public key
+// @Description  get server public key
+// @Tags         keys
+// @Accept       json
+// @Produce      json
+//
+//	@Success      200         {string}  string "OK"
+//	@Failure      400         {string}  string  "Bad Request"
+//	@Failure      500         {string}  string  "Internal Server Error"
+//
+// @Router       /keys/public/server [get]
 func (h *KeysHandler) GetServerPublicKey(w http.ResponseWriter, r *http.Request) {
-	_, err := w.Write([]byte(fmt.Sprintf("%v", r.URL)))
-	if err != nil {
-		return
-	}
-}
-
-func (h *KeysHandler) GetKeys(w http.ResponseWriter, r *http.Request) {
 	_, err := w.Write([]byte(fmt.Sprintf("%v", r.URL)))
 	if err != nil {
 		return
